// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenStorage COOKIE_KEY matches snapshot 1`] = `undefined`;

exports[`TokenStorage generateExpiry constructs date from the created_at and expires_in properties 1`] = `2000-12-12T05:16:01.000Z`;

exports[`TokenStorage remove should reject promise with null when storage.remove fails 1`] = `
Array [
  Array [
    "token",
  ],
]
`;

exports[`TokenStorage remove should resolve promise with null when storage.remove is successful 1`] = `
Array [
  Array [
    "token",
  ],
]
`;

exports[`TokenStorage store should resolve truthy when able to set token 1`] = `
Array [
  Array [
    "token",
    "eyJhY2Nlc3NUb2tlbiI6ImExYjJjM2Q0ZTVmNiIsImV4cGlyZXNJbiI6OTAwLCJjcmVhdGVkQXQiOiIyMDAwLTEyLTEyVDAwOjAxOjAxIn0=",
  ],
]
`;
